--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - name: Hello world action step
       id: hello
-      uses: hello-world-javascript-action
+      uses: ./
       with:
         who-to-greet: 'Mr Paul'
     # Use the output from the `hello` step
